infra/application/service.yml
apiVersion: v1
kind: Service
metadata:
  name: registry-ui # Sets service name
  labels:
    app: registry-ui # Labels and Selectors
spec:
  type: ClusterIP # Sets service type
  ports:
    - port: 80
      name: http
  selector:
    app: nginx
