infra/application/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: registry-ui-ingress
  namespace: registry-ui
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: registry.bastian-somon.fr
      http:
        paths:
          - path: /ui(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: registry-ui
                port:
                  number: 80
